[project]
name = "smartmodelloaders-mxd"
description = "Smart, unified model loaders for ComfyUI that support both standard .safetensors and quantized .gguf formats — no switching nodes required. Includes flexible UNET and CLIP loaders that work across models like SDXL, SD3, Flux, and more."
version = "1.0.4"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# main", "gguf>=0.13.0", "# optional - tokenizer", "sentencepiece", "protobuf"]

[project.urls]
Repository = "https://github.com/Maxed-Out-99/ComfyUI-SmartModelLoaders-MXD"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Maxed-Out-99/ComfyUI-SmartModelLoaders-MXD/wiki"
"Bug Tracker" = "https://github.com/Maxed-Out-99/ComfyUI-SmartModelLoaders-MXD/issues"

[tool.comfy]
PublisherId = "maxedout"
DisplayName = "Smart Model Loaders"
Icon = "https://github.com/Maxed-Out-99/ComfyUI-MaxedOut/blob/main/assets/maxedout_icon.png?raw=true"
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

